# camel

./: CMakeLists.txt  README.md  data.txt
datasets/: final_10000.csv  final_100000.csv
datasets/classification_data/: data_1000.csv  data_10000.csv  data_100000.csv
datasets/regression_data/: Untitled.ipynb  changed.csv  data_100.csv  data_1000.csv  data_10000.csv  data_100000.csv
example_runs/: polynimial.cpp
example_runs/linear_regression/: main  main.cpp  test.cpp
example_runs/perceptron/: main.cpp
include/: DecisionTree.hpp  KMeans.hpp  LinearRegression.hpp  LogisticRegression.hpp  Perceptron.hpp  PolynomialRegression.hpp
knn/libfast_knn-master/: Makefile  README.md
src/decisionTree/: decision_tree.cpp  dt.py
src/kmeans/: KMeans.cpp  kmeans.cpp  kmeans.py.txt
src/knn/: KNN.cpp  KNN.hpp  easy_knn.cpp  main.cpp
src/linear_regression/: LinearRegression.cpp  linear  linear.cpp
src/logistic_regression/: LogisticRegression.cpp  logistic.cpp
src/perceptron/: Perceptron.cpp
src/polynomial_regression/: PolynomialRegression.cpp
test/: Linear.cpp  driver.c  linear.cpp  verification.c
test/armadillo/: B.txt  read  read.cpp  tempCodeRunnerFile.cpp
test/kmeans/: KMeans.cpp  data_1000.csv  data_10000.csv  data_100000.csv  km.cpp  main  main.cpp
test/knn/: KNN.cpp  KNN.hpp  main  main.cpp
test/libgreet/: Makefile
test/libhello/: driver  lib_mylib.c  lib_mylib.h
test/linear/: LinearRegression.cpp  LinearRegression.hpp  data.txt  data_100.csv  data_10000.csv  data_100000.csv  data_10000_clean.csv  lr.cpp  main  my_data.csv
test/logistic/: main  (+5 more)
(+78 files in other folders)
